Fixed webkit browser (Safari, Chrome) issue with laout break on the registerGroup, notifications, messages and username.

--- a/Skins/Metro7_Green/skin.css
+++ b/Skins/Metro7_Green/skin.css
@@ -122,7 +122,7 @@
 		
 		.registerGroup .userMessages strong,
 		.registerGroup .userNotifications strong{
-			margin: 0 0 0px -20px; display:table-row;
+			margin: 0 0 0 0; display:table-row inline;
 		} /*  background:url(Images/userLoginSprite.png) no-repeat 15px 12px; */
 		.registerGroup .userNotifications strong{ background-position:-85px 10px; font-size: 16px; }
 		.registerGroup .userMessages strong:hover{background-position:15px -40px; font-size: 16px; color:#CCCCCC;}
